--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 
     <div class="intro">
         <div class="section-title">Welcome to Face Shape Recognition</div>
-        <p>this is a beta website so it make such a mistake </p>
-        <p>This website uses AI-powered face mesh technology to analyze the shape of your face in real-time using your webcam. The tool detects landmarks on your face and classifies your face shape based on several key parameters.</p>
+        <p>This is a beta version of the website, so it may make some mistakes or not be 100% accurate.</p>
+        <p>The AI-powered system uses face mesh technology to analyze key facial landmarks, such as the width of your forehead, cheekbones, and jaw, to estimate your face shape. However, results may vary depending on factors such as lighting, angle, or the accuracy of the system's facial landmark detection.</p>
         <button onclick="toggleInfo()">Learn More</button>
     </div>
 
